Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72641

macOS: #include <QtQuickWidgets/QQuickWidget> is not found

XMLWordPrintable

    • macOS
    • c6bd9082f4c6b53b30ef6badb7169df31a052305 (qt/qtbase/5.12.1)

      When a QQuickWidget is added via Qt creator Designer and then build it gives error:
      No rule to make target QtQuickWidgets/QQuickWidget', needed by ui_mainwindow.h'. Stop.

      If QQuickWidget is removed and project is build it works fine.
      if QQuickWidget is added again and then qmake is run and project is build it works normally.

        1. qtbug72641_buildlog.txt
          6 kB
          Friedemann Kleint
        2. qtbug72641.zip
          5 kB
          Irfan Omair
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            irfan.omair@digia.com Irfan Omair
            Votes:
            2 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes